--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl_phone_field: ^3.0.1 
+  google_fonts: ^4.0.0
 
 dev_dependencies:
   flutter_test:
