--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   intl_phone_field: ^3.0.1 
   google_fonts: ^4.0.0
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
