--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   google_fonts: ^6.2.1
   intl_phone_field: ^3.2.0
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
