--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   google_fonts: ^6.2.1
   intl_phone_field: ^3.2.0
+  geolocator: ^7.7.0
+  geocoding: ^2.0.1
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
