--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   geolocator: ^7.7.0
   geocoding: ^2.0.1
   pinput: ^5.0.0
+  slide_to_act: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +28,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/onboarding/
+    - assets/home/
+    - assets/
