--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   geocoding: ^2.0.1
   pinput: ^5.0.0
   slide_to_act: ^2.0.2
+  shared_preferences: ^2.2.3
+  flutter_secure_storage: ^9.2.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
